# Savanna

./: .gitattributes  .gitignore  .gitmodules  .vscode  BuildMain.py  CreateProjectFiles.ps1  CreateProjectFiles.sh  FindTodos.ps1  Prepare.ps1  README.md  Savanna.code-workspace  TODO.md  build.ps1  build.sh  unpack-artifacts.ps1
Src/: CMakeLists.txt  CMakeLists.txt.old  SavannaVersion.h.in
Src/Applications/DX12Renderer/: CMakeLists.txt  DX12Application.cpp  DX12Application.h  Main.cpp
Src/Applications/DX12Renderer/Window/: WindowsRenderWindow.cpp  WindowsRenderWindow.h
Src/Applications/Vulkan2Renderer/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  Mesh.h  Renderer.cpp  Renderer.h  Triangle.cpp  Triangle.h
Src/Applications/Vulkan2Renderer/Scene/: Scene.h
Src/Applications/Vulkan2Renderer/Window/: GLFWWindowWrapper.cpp  GLFWWindowWrapper.h
Src/Applications/VulkanRenderer/: CMakeLists.txt  ComputationalGeometry.cpp  ComputationalGeometry.h  Main.cpp  Pipeline.cpp  Pipeline.h  VulkanApplication.cpp  VulkanApplication.h
Src/Core/: CmakeLists.txt  SavannaEngine.h  SavannaSubsystems.cpp  SavannaSubsystems.h
Src/Core/Application/: IApplication.h
Src/Core/Context/: Context.cpp  Context.h
Src/Core/Math/: MathHelpers.h  PointerMath.h
Src/Core/Memory/: CacheLine.h  CoreAllocatorWrapper.cpp  MemoryArena.cpp  MemoryArena.h  MemoryBlocks.h  MemoryManager.h  MemoryPool.cpp  MemoryPool.h
Src/Core/Profiling/: ProfilerDefinitions.h  ProfilerManager.h  ProfilerMarker.cpp  ProfilerMarker.h
Src/Core/SystemManager/: CoreSystem.h
Src/Core/Types/: Handle.h  SavannaClass.h
Src/Core/Types/Enums/: Flags.h  (+1 more)
Src/Core/Utilities/: Console.h  SavannaCoding.h
Src/Editor/: CmakeLists.txt  EditorApplication.cpp  EditorApplication.h  Main.cpp
Src/Experimental/Scripting/: SavannaScripting.h
Src/Modules/: CMakeLists.txt
Src/Modules/Application/: CmakeLists.txt  IApplication.h
Src/Modules/Concurrency/: CMakeLists.txt
Src/Modules/Core/: CmakeLists.txt  SavannaCoreConfiguration.h.in  SavannaEngine.h
Src/Modules/Engine/: CMakeLists.txt  ManagedObject.h
Src/Modules/Entities/: CMakeLists.txt  Component.h  ComponentId.h  ComponentKey.cpp  ComponentKey.h  ComponentManager.h  ComponentRegistry.cpp  ComponentRegistry.h  ECS.h  EntitiesScriptBindings.h  Entity.h  IComponent.h  IComponentData.h  ISystem.h  System.h
Src/Modules/Gfx/: CMakeLists.txt  GfxApi.h  GfxApiEnumeration.h  GfxDevice.h  GfxDeviceDescriptor.h  Renderer.h  Shader.h  ShaderCache.h  ShaderCreateInfo.h  ShaderType.h  TextureFormat.h
Src/Modules/IO/: CMakeLists.txt  FileStream.cpp  VirtualFileSystem.cpp  VirtualFileSystem.h
Src/Modules/Memory/: CMakeLists.txt  Handle.h  MemoryArena.cpp  MemoryArena.h  MemoryManager.cpp  MemoryManager.h  VirtualMemory.cpp  VirtualMemory.h
Src/Modules/OS/: CMakeLists.txt  LibraryHandle.h
Src/Modules/Paradigms/: ComponentParadigm.cpp  ComponentParadigm.h
Src/Modules/Physics/: PhysicsComponent.h  PhysicsInstance.h  PhysicsManager.cpp  PhysicsManager.h
Src/Modules/Plugins/: CMakeLists.txt  PluginManager.cpp
Src/Modules/Rendering/: CMakeLists.txt  GfxApiEnumeration.h  GfxDevice.h  GfxDeviceCapabilities.h  GfxDeviceCapabilityFlags.c  GfxDeviceCapabilityFlags.h  GfxDeviceDescriptor.c  GfxDeviceDescriptor.h  GfxDeviceErrCode.h  Renderer.h  TextureFormat.h
Src/Modules/ShaderCompiler/: CMakeList.txt  CompiledShaderCache.h  IPlatformShaderCompiler.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderLangEnum.h
Src/Modules/Threading/: CMakeLists.txt  IJob.cpp  JobSystem.cpp  JobSystem.h  JobThread.h
Src/Public/: ISavannaInterface.h
Src/Runtime/: .gitignore  CMakeLists.txt  CMakeLists.txt.old  SavannaConfiguration.h.in  SavannaCoreConfiguration.h  SavannaCore_BuildConfig.json  SavannaEngine.cpp  SavannaEngine.h  Savanna_BuildConfig.json
Src/Runtime/Concurrency/: AutoDisposeJob.cpp  AutoDisposeJob.h  CMakeLists.txt  ConcurrencyCapabilities.h  DependencyJobs.h  EngineThread.cpp  EngineThread.h  JobBindings.cpp  JobManager.cpp  JobManager.h  JobSystem.cpp  JobSystem.h  JobThread.h  SavannaConcurrency.cpp  SavannaConcurrency.h  ThreadManager.cpp  ThreadManager.h
Src/Runtime/Deprecated~/: core.CmakeLists.txt.old
Src/Runtime/Entities/: CMakeLists.txt  CMakeLists.txt.old  ComponentKey.h  ComponentParadigm.cpp  ComponentParadigm.h  ComponentRegistry.cpp  ComponentRegistry.h  Entities.h  EntitiesManager.cpp  EntitiesManager.h  EntitiesScriptBindings.h  Entity.h  IComponentData.cpp  IComponentData.h  ISystem.h  ParadigmLayoutDescriptor.h  SavannaEntities.cpp  SavannaEntities.h  Scenario.h  System.cpp  System.h  World.h
Src/Runtime/Gfx/: CMakeLists.txt  GfxApi.h  GfxBindings.cpp  GfxBuffer.h  GfxCapabilities.h  GfxContext.cpp  GfxContext.h  GfxContextErrorCodes.h  GfxDevice.h  GfxDeviceErrorCode.h  GfxDriver.cpp  GfxDriver.h  GfxProgram.h  GfxTexture.h  RenderGraph.h  SavannaGfx.cpp  SavannaGfx.h  Shader.cpp  Shader.h  ShaderCreateInfo.h  ShaderType.h  TextureFormat.h
Src/Runtime/IO/: CMakeLists.txt  CMakeLists.txt.old  FileStream.cpp  FileStream.h  VirtualFileSystem.cpp  VirtualFileSystem.h
Src/Runtime/Math/: MathHelpers.h  PointerMath.h
Src/Runtime/Memory/: MemoryLabel.h  MemoryManager.cpp  MemoryManager.h  MemoryPool.h  SavannaMemory.cpp  SavannaMemory.h  SmartPtrUtils.h  SystemMemoryUtils.h
Src/Runtime/OS/: CMakeLists.txt  CMakeLists.txt.old  DynamicLibraryManager.cpp  DynamicLibraryManager.h  LibraryLoader.h
Src/Runtime/Profiling/: Profiler.h  ProfilerManager.cpp  ProfilerManager.h  ProfilerMarker.cpp  ProfilerMarker.h
Src/Runtime/Public/: CMakeLists.txt.bak  ISavannaDefinitions.h  ISavannaEngine.h  ISavannaEngine.hpp  ISavannaExtension.h  ISavannaInterface.h
Src/Runtime/Scripting/: CmakeLists.txt  LuauAllocator.h  LuauContext.cpp  LuauContext.h  LuauTypes.h  SavannaScripting.h
Src/Runtime/Types/: Optional.h
Src/Runtime/Utilities/: Console.h  SavannaCoding.h
Src/Tests/: CmakeLists.txt  SavannaTestRunner.h
Src/Tests/Core/: CMakeLists.txt  CoreTestUtils.h
Src/Tests/Memory/: CacheLineTests.cpp  MemoryTestUtils.h
Src/Tests/Modules/: CMakeLists.txt
(+628 files in other folders)
